# rticonnextdds-usecases

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md
AirTrafficControl/: README.txt
AppTelemetry/: CMakeLists.txt  Dockerfile  LICENCE  README.md  readme.md
AppTelemetry/docker/: Dockerfile
AppTelemetry/generator/: telemetry.idl
AppTelemetry/generator/c++11/: application.hpp  generator.cxx  generator_qos.xml
AppTelemetry/src/: RsTelemetryGateway.xml  oteladapter.cxx  oteladapter.hpp  otelconfig.hpp  otelconnection.cxx  otelconnection.hpp  otelstreamwriter.cxx  otelstreamwriter.hpp  run_tmux.sh
ChocolateFactory/ExampleCode/src/: CMakeLists.txt
ChocolateFactory/ExampleCode/src/CommonInfrastructure/: ChocolateLotStateEntities.cxx  ChocolateLotStateEntities.h  ChocolateLotStateEntities.hpp  DDSCommunicator.cxx  DDSCommunicator.h  DDSCommunicator.hpp  EnumPrintHelpers.cxx  EnumPrintHelpers.h  EnumPrintHelpers.hpp  InputParser.cxx  InputParser.hpp  OSAPI.cxx
ChocolateFactory/ExampleCode/src/Config/: base_profile_multicast.xml  base_profile_no_multicast.xml  recipe_profiles_multicast.xml  recipe_profiles_no_multicast.xml
ChocolateFactory/ExampleCode/src/Idl/: ChocolateFactory.idl
ChocolateFactory/ExampleCode/src/ManufacturingExecutionSystem/: CMakeLists.txt  MES.cxx  MESInterface.cxx  MESInterface.h  MESInterface.hpp  ManufacturingExecutionSystem.cxx
ChocolateFactory/ExampleCode/src/RecipeGenerator/: CMakeLists.txt  RecipeGenerator.cxx  RecipePublisherInterface.cxx  RecipePublisherInterface.h  RecipePublisherInterface.hpp
ChocolateFactory/ExampleCode/src/StationController/: CMakeLists.txt  StationController.cxx  StationController.h  StationController.hpp  StationControllerInterface.cxx  StationControllerInterface.h  StationControllerInterface.hpp
ChocolateFactory/ExampleCode/src/cmake/: FindConnextDDS.cmake
VehicleTracking/ExampleCode/: CMakeLists.txt
VehicleTracking/ExampleCode/make/: Makefile.common  Makefile.i86Linux2.6gcc4.4.5  Makefile.x64Linux3gcc5.4.0  Makefile.x64Linux4gcc7.3.0
VehicleTracking/ExampleCode/resource/bayarea_county2000/: bayarea_county2000.shx
VehicleTracking/ExampleCode/resource/cmake/: ConnextDdsArgumentChecks.cmake  ConnextDdsCodegen.cmake  FindRTIConnextDDS.cmake
VehicleTracking/ExampleCode/resource/gui/: TrackGuiApp.rc  resource.h
VehicleTracking/ExampleCode/resource/ne_50m_land/: ne_50m_land.README.html
VehicleTracking/ExampleCode/resource/replay/: record_config.xml  replay_config.xml
VehicleTracking/ExampleCode/scripts/: FlightPlanGenerator.bat  FlightPlanGenerator.sh  RadarGenerator.bat  RadarGenerator.sh  TrackGui.bat  TrackGui.sh
VehicleTracking/ExampleCode/src/CommonInfrastructure/: DDSCommunicator.cxx  DDSCommunicator.h  DDSTypeWrapper.h  OSAPI.cxx  OSAPI.h
VehicleTracking/ExampleCode/src/Config/: base_profile_multicast.xml  base_profile_no_multicast.xml  flight_plan_profiles_multicast.xml  flight_plan_profiles_no_multicast.xml  radar_profiles_multicast.xml  radar_profiles_no_multicast.xml
VehicleTracking/ExampleCode/src/FlightPlanGenerator/: FlightPlanGenerator.cxx  FlightPlanPublisherInterface.cxx  FlightPlanPublisherInterface.h
VehicleTracking/ExampleCode/src/Idl/: AirTrafficControl.idl
VehicleTracking/ExampleCode/src/RadarGenerator/: GeneratorAdapter.h  RadarApp.h  RadarGenerator.cxx  RadarInterface.cxx  RadarInterface.h  TrackGenerator.cxx  TrackGenerator.h
VehicleTracking/ExampleCode/src/TrackGui/: FlightInfo.h  NetworkInterface.cxx  NetworkInterface.h  TrackApp.h  TrackGUI.cxx  TrackGUI.h  TrackGuiApp.cxx  TrackPresenter.cxx  TrackPresenter.h
VehicleTracking/ExampleCode/win/: AirTrafficExample-vs2015.sln  AirTrafficExample-vs2017.sln  FlightPlanPublisher_vs2015.vcxproj  FlightPlanPublisher_vs2017.vcxproj  RadarGenerator_vs2015.vcxproj  RadarGenerator_vs2017.vcxproj  SharedDataTypes_vs2015.vcxproj  SharedDataTypes_vs2017.vcxproj  TrackGUI_vs2015.vcxproj  TrackGUI_vs2017.vcxproj
VehicleTracking/ExampleCode/win32/: FlightPlanPublisher.vcxproj  RadarGenerator.vcxproj  RadarGenerator.vcxproj.filters  SharedDataTypes.vcxproj  SharedDataTypes.vcxproj.filters  TrackGUI.vcxproj
VideoData/: CMakeLists.txt  LICENSE  README.md  README.txt  USER_QOS_PROFILES.xml  buffer_script.sh  qos_variables.sh
VideoData/Docs/: VideoData-UserGuideAndCodeDetails.docx
VideoData/ExampleCode/: CMakeLists.txt  USER_QOS_PROFILES.xml  config.properties
VideoData/ExampleCode/make/: Makefile.Darwin  Makefile.Linux  Makefile.common  Makefile.i86Linux2.6gcc4.4.5  Makefile.i86Linux3.xgcc4.6.3  Makefile.x64Darwin12clang4.1  Makefile.x64Darwin14clang6.0  Makefile.x64Linux3gcc4.8.2  Makefile.x64Linux3gcc5.4.0  Makefile.x64Linux4gcc7.3.0
VideoData/ExampleCode/resource/: Copyright.txt
VideoData/ExampleCode/scripts/: Build.pl  VideoPublisher.bat  VideoPublisher.sh  VideoStreaming_linux.txt  VideoStreaming_windows.txt  VideoSubscriber.bat  VideoSubscriber.sh  run_cam_demo.bat  run_cam_demo.sh  run_cam_ff_only.bat  run_cam_ff_only.sh  run_demo.bat  run_demo.sh  run_demo_ff_only.bat  run_demo_ff_only.sh
VideoData/ExampleCode/src/: CMakeLists.txt
VideoData/ExampleCode/src/CommonInfrastructure/: DDSCommunicator.cxx  DDSCommunicator.h  DDSTypeWrapper.h  OSAPI.cxx  OSAPI.h  SimCList.cxx  VideoBuffer.cxx  VideoBuffer.h  VideoEvent.h  VideoOutput.cxx  VideoOutput.h  VideoSource.cxx  VideoSource.h  simclist.h
VideoData/ExampleCode/win32/: SharedDataTypes.vcxproj  SharedDataTypes.vcxproj.filters  SharedDataTypes_vs2015.vcxproj  SharedDataTypes_vs2017.vcxproj  StreamingVideoExample-vs2010.sln  StreamingVideoExample-vs2015.sln  StreamingVideoExample-vs2017.sln  VideoPublisher.vcxproj  VideoPublisher.vcxproj.filters  VideoPublisher_vs2015.vcxproj  VideoPublisher_vs2017.vcxproj  VideoSubscriber.vcxproj  VideoSubscriber.vcxproj.filters  VideoSubscriber_vs2015.vcxproj  VideoSubscriber_vs2017.vcxproj
VideoData/idl/: video.idl
VideoData/resource/cmake/: FindGLIB.cmake  FindGStreamer.cmake
VideoData/src/gst-connextsink/: gstconnextsink.c  gstconnextsink.h
VideoData/src/gst-connextsrc/: gstconnextsrc.c  gstconnextsrc.h
(+205 files in other folders)
